--- a/projects/core/6ad9f8ee/curl/postgres/reports/html/index.html
+++ b/projects/core/6ad9f8ee/curl/postgres/reports/html/index.html
@@ -51,3 +51,6 @@
 </div>
 </body>
 </html>
+
+  <h2 class="summaryGroup infoBox" style="margin: 40px; padding: 15px;"><a href="https://raw.githack.com/dotCMS/test-results/master/projects/core/6ad9f8ee/curl/postgres/logs/dotcms.log" target="_blank">dotcms.log</a></h2>
+  
