--- a/projects/core/issue-18563-create-resource-for-bundle-operations/curl/postgres/reports/html/index.html
+++ b/projects/core/issue-18563-create-resource-for-bundle-operations/curl/postgres/reports/html/index.html
@@ -20,10 +20,12 @@
     <td>PASS</td></tr>
 <tr><td><a href="./Bundle_Resource_Tests.html">Bundle Resource Tests.json</a></td>
     <td>FAIL</td></tr>
+<tr><td><a href="./BundleResourceTests.html">BundleResourceTests.json</a></td>
+    <td>FAIL</td></tr>
 <tr><td><a href="./DotAsset-MultiPart-TempFile.html">DotAsset-MultiPart-TempFile.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./DotAsset.html">DotAsset.postman_collection.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./ESIndexResource.html">ESIndexResource.postman_collection.json</a></td>
     <td>FAIL</td></tr>
 <tr><td><a href="./ESIndexResourceTests.html">ESIndexResourceTests.json</a></td>
@@ -31,7 +33,7 @@
 <tr><td><a href="./FolderResource.html">FolderResource.postman_collection.json</a></td>
     <td>FAIL</td></tr>
 <tr><td><a href="./GraphQLTests.html">GraphQLTests.json</a></td>
-    <td>PASS</td></tr>
+    <td>FAIL</td></tr>
 <tr><td><a href="./LanguageResourceTests.html">LanguageResourceTests.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./NavResource_Tests.html">NavResource Tests.json</a></td>
@@ -47,3 +49,6 @@
 </div>
 </body>
 </html>
+
+  <h2 class="summaryGroup infoBox" style="margin: 40px; padding: 15px;"><a href="https://raw.githack.com/dotCMS/test-results/master/projects/core/cf2f0cef/curl/postgres/logs/dotcms.log" target="_blank">dotcms.log</a></h2>
+  
