--- a/projects/core/issue-18563-create-resource-for-bundle-operations/curl/postgres/reports/html/ESIndexResource.html
+++ b/projects/core/issue-18563-create-resource-for-bundle-operations/curl/postgres/reports/html/ESIndexResource.html
@@ -448,7 +448,7 @@ table.dataTable td, table.dataTable tr {
 <div class="row">
   <div class="col-md-9 col-lg-12 main">
    <h1 class="display-2 text-center">Newman Run Dashboard</h1>
-   <h5 class="text-center">Wednesday, 01 July 2020 05:20:30</h5>
+   <h5 class="text-center">Wednesday, 01 July 2020 16:26:25</h5>
    <div class="row">
     <div class="col-lg-3 col-md-6">
      <div class="card text-white card-success">
@@ -514,9 +514,9 @@ table.dataTable td, table.dataTable tr {
             <div class="card border-info">
                 <div class="card-body">
                 <h5 class="card-title text-uppercase text-white text-center bg-info">Timings and Data</h5>
-                <span><i class="fas fa-stopwatch"></i></span><strong> Total run duration:</strong> 312ms<br>
+                <span><i class="fas fa-stopwatch"></i></span><strong> Total run duration:</strong> 6.3s<br>
                 <span><i class="fas fa-database"></i></span><strong> Total data received:</strong> 0B<br>
-                <span><i class="fas fa-stopwatch"></i></span><strong> Average response time:</strong> 76ms<br>
+                <span><i class="fas fa-stopwatch"></i></span><strong> Average response time:</strong> 3.1s<br>
                 </div>
             </div>
         </div>
@@ -585,11 +585,11 @@ table.dataTable td, table.dataTable tr {
                     <div class="card-deck">
                         <div class="card border-danger">
                             <div class="card-header bg-danger">
-                                <a data-toggle="collapse" href="#" data-target="#fails-collapse-3e8cfc89-fae5-4910-b738-63a390062881" aria-expanded="false" aria-controls="collapse" id="fails-3e8cfc89-fae5-4910-b738-63a390062881" class="collapsed text-white z-block">
+                                <a data-toggle="collapse" href="#" data-target="#fails-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e" aria-expanded="false" aria-controls="collapse" id="fails-f57d593d-a258-4741-b990-b5d63d43fb6e" class="collapsed text-white z-block">
                                     Iteration 1 - Error -  -  <i class="float-lg-right fa fa-chevron-down" style="padding-top:5px;"></i>
                                 </a>
                             </div>
-                            <div id="fails-collapse-3e8cfc89-fae5-4910-b738-63a390062881" class="collapse" aria-labelledby="fails-3e8cfc89-fae5-4910-b738-63a390062881">
+                            <div id="fails-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e" class="collapse" aria-labelledby="fails-f57d593d-a258-4741-b990-b5d63d43fb6e">
                             <div class="card-body">
                                 <h5 ><strong>Failed Test:</strong> </h5>
                             <hr>
@@ -606,11 +606,11 @@ table.dataTable td, table.dataTable tr {
                     <div class="card-deck">
                         <div class="card border-danger">
                             <div class="card-header bg-danger">
-                                <a data-toggle="collapse" href="#" data-target="#fails-collapse-3e8cfc89-fae5-4910-b738-63a390062881" aria-expanded="false" aria-controls="collapse" id="fails-3e8cfc89-fae5-4910-b738-63a390062881" class="collapsed text-white z-block">
+                                <a data-toggle="collapse" href="#" data-target="#fails-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e" aria-expanded="false" aria-controls="collapse" id="fails-f57d593d-a258-4741-b990-b5d63d43fb6e" class="collapsed text-white z-block">
                                     Iteration 1 - AssertionError - ESIndexResource - GetActiveLive <i class="float-lg-right fa fa-chevron-down" style="padding-top:5px;"></i>
                                 </a>
                             </div>
-                            <div id="fails-collapse-3e8cfc89-fae5-4910-b738-63a390062881" class="collapse" aria-labelledby="fails-3e8cfc89-fae5-4910-b738-63a390062881">
+                            <div id="fails-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e" class="collapse" aria-labelledby="fails-f57d593d-a258-4741-b990-b5d63d43fb6e">
                             <div class="card-body">
                                 <h5 ><strong>Failed Test:</strong> Active Live index returned</h5>
                             <hr>
@@ -652,16 +652,16 @@ table.dataTable td, table.dataTable tr {
     </div>
     <h6 class="text-uppercase text-muted" id="iterationSelected" style="padding-top: 10px;"></h6>
 	<div class="tab-content" id="execution-data">
-            <div id="folder-3e8cfc89-fae5-4910-b738-63a390062881" class="card-deck iteration-0">
+            <div id="folder-f57d593d-a258-4741-b990-b5d63d43fb6e" class="card-deck iteration-0">
             <div class="row iteration-0">
                 <div class="col-sm-12 mb-3 iteration-0">
                 <div class="card iteration-0">
                     <div class="card-header  bg-danger iteration-0">
-                        <a data-toggle="collapse" href="#" data-target="#collapse-3e8cfc89-fae5-4910-b738-63a390062881" aria-expanded="false" aria-controls="collapse" id="requests-3e8cfc89-fae5-4910-b738-63a390062881" class="collapsed text-white z-block">
+                        <a data-toggle="collapse" href="#" data-target="#collapse-f57d593d-a258-4741-b990-b5d63d43fb6e" aria-expanded="false" aria-controls="collapse" id="requests-f57d593d-a258-4741-b990-b5d63d43fb6e" class="collapsed text-white z-block">
                     Iteration: 1 - GetActiveLive <i class="float-lg-right fa fa-chevron-down" style="padding-top: 5px;"></i>
                 </a>
                     </div>
-                    <div id="collapse-3e8cfc89-fae5-4910-b738-63a390062881" class="collapse" aria-labelledby="requests-3e8cfc89-fae5-4910-b738-63a390062881">
+                    <div id="collapse-f57d593d-a258-4741-b990-b5d63d43fb6e" class="collapse" aria-labelledby="requests-f57d593d-a258-4741-b990-b5d63d43fb6e">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-sm-12 mb-3">
@@ -677,7 +677,7 @@ table.dataTable td, table.dataTable tr {
                                     <div class="card-body">
                                     <h5 class="card-title text-uppercase text-white text-center bg-info">Response Information</h5>
                                     <span><i class="fas fa-info-circle"></i></span><strong> Response Code:</strong> <span class="float-right badge-outline badge badge-success"> 200 - OK</span><br>
-                                    <span><i class="fas fa-stopwatch"></i></span><strong> Mean time per request:</strong> <span class="float-right badge-outline badge badge-success"> 152ms</span><br>
+                                    <span><i class="fas fa-stopwatch"></i></span><strong> Mean time per request:</strong> <span class="float-right badge-outline badge badge-success"> 6.2s</span><br>
                                     <span><i class="fas fa-database"></i></span><strong> Mean size per request:</strong> <span class="float-right badge-outline badge badge-success"> 0B</span><br>
                                     <hr>
                                     <h5 class="card-title text-uppercase text-white text-center bg-info">Test Pass Percentage</h5>
@@ -725,7 +725,7 @@ table.dataTable td, table.dataTable tr {
                                                     </tr>
                                                     <tr>
                                                         <td class="text-nowrap">Postman-Token</td>
-                                                        <td>e7dbd520-9ac5-4987-a29a-73930f875b79</td>
+                                                        <td>c73e77be-0c9f-465d-9f74-374348c8ecb6</td>
                                                     </tr>
                                                     <tr>
                                                         <td class="text-nowrap">Host</td>
@@ -759,11 +759,11 @@ table.dataTable td, table.dataTable tr {
                                             <tbody>
                                                 <tr>
                                                     <td class="text-nowrap">Set-Cookie</td>
-                                                    <td>JSESSIONID&#x3D;7CD46890B0D90AF1B8FBE03F3C56CA96; Path&#x3D;/; HttpOnly</td>
+                                                    <td>JSESSIONID&#x3D;44A73AFF614004E9E2A4BDCB60C07F48; Path&#x3D;/; HttpOnly</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="text-nowrap">Set-Cookie</td>
-                                                    <td>access_token&#x3D;eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJqdGkiOiJiZmM2NDliNy00OGJiLTQ3YzYtODBlMC0xZDEwNTkzZGRjMTciLCJ4bW9kIjoxNTkzNTgwODMwNTcyLCJzdWIiOiJkb3RjbXMub3JnLjEiLCJpYXQiOjE1OTM1ODA4MzAsImlzcyI6IjQ2NWI3MmYxNjMiLCJleHAiOjE1OTM2NjcyMzB9.ZKeHnHJFF29dMxui6ZLv4DKfJF2U0XNe1ruTgx4LNEI; Path&#x3D;/</td>
+                                                    <td>access_token&#x3D;eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJqdGkiOiJmMDViOWExZC1kMmMyLTQ3ZjMtYmU4Yy0xYmMzNTQ2MjQ5YTAiLCJ4bW9kIjoxNTkzNjIwNzgyNzY0LCJzdWIiOiJkb3RjbXMub3JnLjEiLCJpYXQiOjE1OTM2MjA3ODIsImlzcyI6Ijc1NmI3ZmU2YjYiLCJleHAiOjE1OTM3MDcxODJ9.QybwSjAFfGXjliz_JQVLccrNfrCKaxAZmPIzlXDnlyo; Path&#x3D;/</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="text-nowrap">Access-Control-Allow-Origin</td>
@@ -791,7 +791,7 @@ table.dataTable td, table.dataTable tr {
                                                 </tr>
                                                 <tr>
                                                     <td class="text-nowrap">Date</td>
-                                                    <td>Wed, 01 Jul 2020 05:20:30 GMT</td>
+                                                    <td>Wed, 01 Jul 2020 16:26:25 GMT</td>
                                                 </tr>
                                             </tbody>
                                         </table>
@@ -818,7 +818,7 @@ table.dataTable td, table.dataTable tr {
                                 <div class="card-body">
                                 <h5 class="card-title text-uppercase text-white text-center bg-info">Test Information</h5>
                                     <div class="table-responsive text-nowrap">
-                                        <table id="myTable-ab9c0d39-ce64-4767-9e71-7ea274860948" class="table table-hover">
+                                        <table id="myTable-6d9944f8-ce27-4e49-ba97-711c3fedc3ee" class="table table-hover">
                                         <thead><tr class="text-center"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th></tr></thead>
                                             <tbody>
                                                 <tr >
@@ -897,7 +897,7 @@ table.dataTable td, table.dataTable tr {
 
 <script>
 $(document).ready( function () {
-    $('#myTable-ab9c0d39-ce64-4767-9e71-7ea274860948').DataTable({
+    $('#myTable-6d9944f8-ce27-4e49-ba97-711c3fedc3ee').DataTable({
         "retrieve": true,
         "paging": false,
         "info": false,
@@ -947,17 +947,17 @@ $('#openAllRequests').on('click', function(e) {
 let clickCount = $(this).data("clickCount") || 1
 switch (clickCount){
     case 1:
-            $('#requests-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('collapsed')
-            $('#collapse-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('collapsed')
-            $('#requests-3e8cfc89-fae5-4910-b738-63a390062881').addClass('show')
-            $('#collapse-3e8cfc89-fae5-4910-b738-63a390062881').addClass('show')
+            $('#requests-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('collapsed')
+            $('#collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('collapsed')
+            $('#requests-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('show')
+            $('#collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('show')
         $('#openAllRequests').html("Collapse Requests");
         break;
     case 2:
-            $('#requests-3e8cfc89-fae5-4910-b738-63a390062881').addClass('collapsed')
-            $('#collapse-3e8cfc89-fae5-4910-b738-63a390062881').addClass('collapsed')
-            $('#requests-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('show')
-            $('#collapse-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('show')
+            $('#requests-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('collapsed')
+            $('#collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('collapsed')
+            $('#requests-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('show')
+            $('#collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('show')
         $('#openAllRequests').html("Expand Requests");
         break;
 }
@@ -973,17 +973,17 @@ $('#openAllSkipped').on('click', function(e) {
 let clickCount = $(this).data("clickCount") || 1
 switch (clickCount){
     case 1:
-            $('#skipped-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('collapsed')
-            $('#skipped-collapse-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('collapsed')
-            $('#skipped-3e8cfc89-fae5-4910-b738-63a390062881').addClass('show')
-            $('#skipped-collapse-3e8cfc89-fae5-4910-b738-63a390062881').addClass('show')
+            $('#skipped-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('collapsed')
+            $('#skipped-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('collapsed')
+            $('#skipped-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('show')
+            $('#skipped-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('show')
         $('#openAllSkipped').html("Collapse All Skipped Tests");
         break;
     case 2:
-            $('#skipped-3e8cfc89-fae5-4910-b738-63a390062881').addClass('collapsed')
-            $('#skipped-collapse-3e8cfc89-fae5-4910-b738-63a390062881').addClass('collapsed')
-            $('#skipped-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('show')
-            $('#skipped-collapse-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('show')
+            $('#skipped-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('collapsed')
+            $('#skipped-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('collapsed')
+            $('#skipped-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('show')
+            $('#skipped-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('show')
         $('#openAllSkipped').html("Expand All Skipped Tests");
         break;
 }
@@ -999,17 +999,17 @@ $('#openAllFailed').on('click', function(e) {
 let clickCount = $(this).data("clickCount") || 1
 switch (clickCount){
     case 1:
-            $('#fails-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('collapsed')
-            $('#fails-collapse-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('collapsed')
-            $('#fails-3e8cfc89-fae5-4910-b738-63a390062881').addClass('show')
-            $('#fails-collapse-3e8cfc89-fae5-4910-b738-63a390062881').addClass('show')
+            $('#fails-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('collapsed')
+            $('#fails-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('collapsed')
+            $('#fails-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('show')
+            $('#fails-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('show')
         $('#openAllFailed').html("Collapse All Failed Tests");
         break;
     case 2:
-            $('#fails-3e8cfc89-fae5-4910-b738-63a390062881').addClass('collapsed')
-            $('#fails-collapse-3e8cfc89-fae5-4910-b738-63a390062881').addClass('collapsed')
-            $('#fails-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('show')
-            $('#fails-collapse-3e8cfc89-fae5-4910-b738-63a390062881').removeClass('show')
+            $('#fails-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('collapsed')
+            $('#fails-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').addClass('collapsed')
+            $('#fails-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('show')
+            $('#fails-collapse-f57d593d-a258-4741-b990-b5d63d43fb6e').removeClass('show')
         $('#openAllFailed').html("Expand All Failed Tests");
         break;
 }
