--- a/projects/core/current/curl/postgres/reports/html/index.html
+++ b/projects/core/current/curl/postgres/reports/html/index.html
@@ -31,7 +31,7 @@
 <tr><td><a href="./FolderResource.html">FolderResource.postman_collection.json</a></td>
     <td>FAIL</td></tr>
 <tr><td><a href="./GraphQLTests.html">GraphQLTests.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./LanguageResourceTests.html">LanguageResourceTests.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./NavResource_Tests.html">NavResource Tests.json</a></td>
