Adding curl tests results for 5ececdb6 at change-coreWeb-version

--- a/projects/core/current/curl/postgres/reports/html/index.html
+++ b/projects/core/current/curl/postgres/reports/html/index.html
@@ -20,12 +20,10 @@
     <td>PASS</td></tr>
 <tr><td><a href="./Bundle_Resource_Tests.html">Bundle Resource Tests.json</a></td>
     <td>FAIL</td></tr>
-<tr><td><a href="./BundleResourceTests.html">BundleResourceTests.json</a></td>
-    <td>PASS</td></tr>
 <tr><td><a href="./DotAsset-MultiPart-TempFile.html">DotAsset-MultiPart-TempFile.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./DotAsset.html">DotAsset.postman_collection.json</a></td>
-    <td>PASS</td></tr>
+    <td>FAIL</td></tr>
 <tr><td><a href="./ESIndexResource.html">ESIndexResource.postman_collection.json</a></td>
     <td>FAIL</td></tr>
 <tr><td><a href="./ESIndexResourceTests.html">ESIndexResourceTests.json</a></td>
@@ -37,6 +35,10 @@
 <tr><td><a href="./LanguageResourceTests.html">LanguageResourceTests.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./NavResource_Tests.html">NavResource Tests.json</a></td>
+    <td>FAIL</td></tr>
+<tr><td><a href="./Page_Resource_Tests.html">Page Resource Tests.json</a></td>
+    <td>FAIL</td></tr>
+<tr><td><a href="./Pages_Resource_Tests.html">Pages Resource Tests.json</a></td>
     <td>FAIL</td></tr>
 <tr><td><a href="./PagesResourceTests.html">PagesResourceTests.json</a></td>
     <td>FAIL</td></tr>
@@ -50,5 +52,5 @@
 </body>
 </html>
 
-  <h2 class="summaryGroup infoBox" style="margin: 40px; padding: 15px;"><a href="https://raw.githack.com/dotCMS/test-results/master/projects/core/bf19d53a/curl/postgres/logs/dotcms.log" target="_blank">dotcms.log</a></h2>
+  <h2 class="summaryGroup infoBox" style="margin: 40px; padding: 15px;"><a href="https://raw.githack.com/dotCMS/test-results/change-coreWeb-version/projects/core/5ececdb6/curl/postgres/logs/dotcms.log" target="_blank">dotcms.log</a></h2>
   
