Adding curl tests results for 38dc0403 at fix-more-postman-tests

--- a/projects/core/current/curl/postgres/reports/html/index.html
+++ b/projects/core/current/curl/postgres/reports/html/index.html
@@ -34,8 +34,8 @@
     <td>PASS</td></tr>
 <tr><td><a href="./LanguageResourceTests.html">LanguageResourceTests.json</a></td>
     <td>PASS</td></tr>
-<tr><td><a href="./NavResource_Tests.html">NavResource Tests.json</a></td>
-    <td>FAIL</td></tr>
+<tr><td><a href="./NavResourceTests.html">NavResourceTests.json</a></td>
+    <td>PASS</td></tr>
 <tr><td><a href="./PagesResourceTests.html">PagesResourceTests.json</a></td>
     <td>FAIL</td></tr>
 <tr><td><a href="./ResourceLink.html">ResourceLink.postman_collection.json</a></td>
@@ -48,5 +48,5 @@
 </body>
 </html>
 
-  <h2 class="summaryGroup infoBox" style="margin: 40px; padding: 15px;"><a href="https://raw.githack.com/dotCMS/test-results/fix-more-postman-tests/projects/core/b4e04a7b/curl/postgres/logs/dotcms.log" target="_blank">dotcms.log</a></h2>
+  <h2 class="summaryGroup infoBox" style="margin: 40px; padding: 15px;"><a href="https://raw.githack.com/dotCMS/test-results/fix-more-postman-tests/projects/core/38dc0403/curl/postgres/logs/dotcms.log" target="_blank">dotcms.log</a></h2>
   
