Adding curl tests results for bc489e44 at master

--- a/projects/core/current/curl/mysql/reports/html/index.html
+++ b/projects/core/current/curl/mysql/reports/html/index.html
@@ -34,6 +34,8 @@
     <td>FAIL</td></tr>
 <tr><td><a href="./LanguageResourceTests.html">LanguageResourceTests.json</a></td>
     <td>PASS</td></tr>
+<tr><td><a href="./Logger_Resource.html">Logger Resource.postman_collection.json</a></td>
+    <td>PASS</td></tr>
 <tr><td><a href="./NavResourceTests.html">NavResourceTests.json</a></td>
     <td>FAIL</td></tr>
 <tr><td><a href="./PagesResourceTests.html">PagesResourceTests.json</a></td>
@@ -48,5 +50,5 @@
 </body>
 </html>
 
-  <h2 class="summaryGroup infoBox" style="margin: 40px; padding: 15px;"><a href="https://raw.githack.com/dotCMS/test-results/master/projects/core/82f79966/curl/mysql/logs/dotcms.log" target="_blank">dotcms.log</a></h2>
+  <h2 class="summaryGroup infoBox" style="margin: 40px; padding: 15px;"><a href="https://raw.githack.com/dotCMS/test-results/master/projects/core/bc489e44/curl/mysql/logs/dotcms.log" target="_blank">dotcms.log</a></h2>
   
